cluster/apps/development/gitea-runner/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-actions-metrics
  labels:
    app.kubernetes.io/name: actions-runner
    app.kubernetes.io/instance: gitea-actions
spec:
  selector:
    app.kubernetes.io/name: actions-runner
    app.kubernetes.io/instance: gitea-actions
  ports:
    - name: metrics
      port: 9101
      targetPort: 9101
